syntax = "proto3";

package film;

option go_package = "github.com/blazee5/films-api";

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
}

message UserRequest {
  int32 id = 1;
}

message UserResponse {
  int32 id = 1;
}

message Film {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string genre = 4;
}

message FilmRequest {
  int32 id = 1;
}

message FilmResponse {
  int32 id = 1;
}

message SuccessResponse {
  string status = 1;
}

service FilmService {
  rpc CreateFilm(Film) returns (FilmResponse);
  rpc GetFilm(FilmRequest) returns (Film);
  rpc UpdateFilm(Film) returns (Film);
  rpc DeleteFilm(FilmRequest) returns (SuccessResponse);
}

service UserService {
  rpc CreateUser(User) returns (UserResponse);
  rpc GetUser(UserRequest) returns (User);
  rpc UpdateUser(User) returns (User);
  rpc DeleteUser(UserRequest) returns (SuccessResponse);
}